<?xml version="1.0"?>
<package format="2">
  <name>mh5_msgs</name>
  <version>0.1.0</version>
  <description>Massges and service definitions for MH5 robot</description>
  <maintainer email="alex.sonea@gmail.com">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
